--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
   <div class="content"></div>
 </div>
 
+  <!-- ================= CONVERTER ESKALASI ================= -->
+<section class="section" id="eskalasi">
+  <h2>🔁 CONVERTER ESKALASI</h2>
+
+  <div class="grid2">
+    <div class="card">
+      <h3>📥 Data A</h3>
+      <textarea id="eskInput" placeholder="Paste Data A di sini..."></textarea>
+      <button id="btnConvert">Convert</button>
+    </div>
+
+    <div class="card">
+      <h3>📤 Data B</h3>
+      <textarea id="eskOutput" readonly></textarea>
+      <button id="btnCopy">COPY</button>
+    </div>
+  </div>
+</section>
+
+
 <script src="js/app.js"></script>
 </body>
 </html>
+
