--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
+<body class="light">
 
 <h1>📊 Laporan GAMAS (CSV)</h1>
 
@@ -63,4 +63,5 @@
 <script src="js/app.js"></script>
 </body>
 </html>
+
 
