--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body class="light">
 
-<h1>📊 Laporan GAMAS (CSV)</h1>
+<div class="page-title">
+  <h1>📊 Laporan GAMAS (CSV)</h1>
+</div>
+
 
 <div class="header">
   <div class="upload">
@@ -42,7 +45,9 @@
 
   <!-- ================= CONVERTER ESKALASI ================= -->
 <section class="section" id="eskalasi">
+  <div class="page-title">
   <h2>🔁 CONVERTER ESKALASI</h2>
+</div>
 
   <div class="grid2">
     <div class="card">
@@ -63,5 +68,4 @@
 <script src="js/app.js"></script>
 </body>
 </html>
-
-
+  
