--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
   <h1>📊 Laporan GAMAS (CSV)</h1>
 </div>
 
-
 <div class="header">
   <div class="upload">
     <input type="file" id="fileInput" accept=".csv" />
+  </div>
+
+  <!-- 🔍 SEARCH BAR (BARU) -->
+  <div class="search-area">
+    <input
+      type="text"
+      id="searchInput"
+      placeholder="Search INC (contoh: INC123, INC456)"
+    />
+    <button id="btnSearch">OK</button>
   </div>
 
   <div class="stats">
@@ -43,11 +52,11 @@
   <div class="content"></div>
 </div>
 
-  <!-- ================= CONVERTER ESKALASI ================= -->
+<!-- ================= CONVERTER ESKALASI ================= -->
 <section class="section" id="eskalasi">
   <div class="page-title">
-  <h2>🔁 CONVERTER ESKALASI</h2>
-</div>
+    <h2>🔁 CONVERTER ESKALASI</h2>
+  </div>
 
   <div class="grid2">
     <div class="card">
@@ -64,8 +73,6 @@
   </div>
 </section>
 
-
 <script src="js/app.js"></script>
 </body>
 </html>
-  
