--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
     <button id="btnSearch">OK</button>
   </div>
 
-  <div class="stats">
-    <div class="badge distri" id="distriCount">DISTRIBUSI : 0</div>
-    <div class="badge feeder" id="feederCount">FEEDER : 0</div>
-    <div class="badge gpon" id="gponCount">GPON : 0</div>
-  </div>
+	<div class="stats">
+	  <div class="badge total" id="totalCount">TOTAL : 0</div>
+	  <div class="badge bb" id="bbCount">BB : 0</div>
+	  <div class="badge ip" id="ipCount">IP : 0</div>
+	  <div class="badge gpon" id="gponCount">GPON : 0</div>
+	  <div class="badge feeder" id="feederCount">FEEDER : 0</div>
+	  <div class="badge distri" id="distriCount">DISTRIBUSI : 0</div>
+	</div>
+
 
   <div class="theme-area">
     <div class="toggle" id="themeToggle">🌙 Dark</div>
@@ -76,3 +80,4 @@
 <script src="js/app.js"></script>
 </body>
 </html>
+   
