--- a/index.html
+++ b/index.html
@@ -46,15 +46,22 @@
   </div>
 </div>
 
-<div class="section" id="jatim">
-  <h2>JATIM</h2>
+<div id="jatim" class="section">
+  <div class="section-header">
+    <h2>JATIM</h2>
+    <button class="copy-btn" onclick="copyColumn('jatim')">COPY</button>
+  </div>
   <div class="content"></div>
 </div>
 
-<div class="section" id="balnus">
-  <h2>BALNUS</h2>
+<div id="balnus" class="section">
+  <div class="section-header">
+    <h2>BALNUS</h2>
+    <button class="copy-btn" onclick="copyColumn('balnus')">COPY</button>
+  </div>
   <div class="content"></div>
 </div>
+
 
 <!-- ================= CONVERTER ESKALASI ================= -->
 <section class="section" id="eskalasi">
@@ -80,4 +87,3 @@
 <script src="js/app.js"></script>
 </body>
 </html>
-   
