--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     </div>
   </div>
 </section>
-
+<div class="watermark">SOEKMA PROPERTI</div>
 <script src="js/app.js"></script>
 </body>
 </html>
+
