--- a/index.html
+++ b/index.html
@@ -135,6 +135,33 @@
   </div>
 </section>
 
+<footer class="app-footer">
+  <div class="footer-center">
+    <div class="footer-text">
+      © 2026–2027 <strong>Soekma Properti</strong>
+    </div>
+
+    <div class="footer-icons">
+      <a href="#" class="footer-icon wa" title="WhatsApp">
+        <svg viewBox="0 0 24 24">
+          <path d="M20.5 3.5A11.9 11.9 0 0012 0 12 12 0 002.2 18.3L0 24l5.9-2.1A12 12 0 1020.5 3.5z"/>
+        </svg>
+      </a>
+
+      <a href="#" class="footer-icon ig" title="Instagram">
+        <svg viewBox="0 0 24 24">
+          <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5.5A4.5 4.5 0 1016.5 12 4.5 4.5 0 0012 7.5z"/>
+        </svg>
+      </a>
+
+      <a href="#" class="footer-icon x" title="X">
+        <svg viewBox="0 0 24 24">
+          <path d="M18.9 2H22l-7.1 8.1L23 22h-6.4l-5-6.3L6 22H3l7.6-8.7L1 2h6.6l4.5 5.7z"/>
+        </svg>
+      </a>
+    </div>
+  </div>
+</footer>
    
 <div class="watermark">SOEKMA PROPERTI</div>
 <!-- SheetJS for Excel -->
