--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 
 </div>
 
+<!-- ================= FILTER ================= -->
+<div id="statusFilterBox" class="status-filter"></div>
+
+<!-- ================= STATUS BADGE ================= -->
+<div id="statusBadges" class="status-badges"></div>
+
 
 <div id="jatim" class="section">
   <div class="section-header">
