--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 <div id="statusBadges" class="status-badges"></div>
 
 
+<div class="export-area">
+  <button id="exportExcel" class="export-btn">
+    📥 Export Excel
+  </button>
+</div>
+
+
 <div id="jatim" class="section">
   <div class="section-header">
     <h2>JATIM</h2>
@@ -180,5 +187,8 @@
 <!-- SheetJS for Excel -->
 <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 <script src="js/app.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+
 </body>
 </html>
