--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
   <button id="btnExportTXT" class="btn dark">
     📝 Export TXT
   </button>
+  <button id="btnExportTXTAmel" class="btn dark">
+  📝 Export TXT Permintaan Bu Amel
+  </button>
+
 </div>
 
   <div class="cra-table-wrap">
@@ -143,6 +147,7 @@
           <th>No CRA</th>
           <th>Judul</th>
           <th>Lokasi</th>
+		  <th>Witel</th>
           <th>Regional</th>
           <th>PIC</th>
           <th>Tanggal</th>
@@ -191,4 +196,4 @@
 <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
 </body>
-</html>
+</html>  
