--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
   <button id="btnExportTXTAmel" class="btn dark">
   📝 Export TXT Permintaan Bu Amel
   </button>
-
+  <button id="btnResumeCRA" class="btn dark">
+  Resume CRA
+  </button>
 </div>
 
   <div class="cra-table-wrap">
@@ -158,7 +160,27 @@
       <tbody></tbody>
     </table>
   </div>
+  
+<div id="resumeModal" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:9999; justify-content:center; align-items:center;">
+  <div style="background:#fff; width:500px; max-width:90%; padding:20px; border-radius:8px;">
+    
+    <h3>Resume CRA</h3>
+
+    <textarea id="resumeText"
+      style="width:100%; height:250px; margin-bottom:10px; resize:none;"></textarea>
+
+    <div style="text-align:right;">
+      <button id="copyResume">Copy</button>
+      <button id="closeResume">Close</button>
+    </div>
+
+  </div>
+</div>
+
 </section>
+
+
+
 
 <footer class="app-footer">
   <div class="footer-center">
@@ -196,4 +218,4 @@
 <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
 </body>
-</html>  
+</html>
