--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <div class="export-area">
   <button id="exportExcel" class="export-btn">
-    📥 Export Excel
+    📥 Export Laporan Gamas DM 
   </button>
 </div>
 
